examples/high-quality-code/coupling/coupling-types/bad/internal-knowledge/control-flag/a-module.mjs
export function calculateShapeArea(width, height, isTriangle) {
  if (isTriangle) return (width * height) / 2;

  return width * height;
}
